<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            tools:context=".MainActivity">
            <Button
                android:id="@+id/LinearLayout"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/bg"
                android:text="@string/_1"
                android:onClick="btn1"
                android:textSize="40sp"/>
            <TextView
                android:id="@+id/textLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/linear_layout"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            tools:context=".MainActivity">
            <Button
                android:id="@+id/RelativeLayout"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/bg"
                android:text="@string/_2"
                android:onClick="btn22"
                android:textSize="40sp"/>
            <TextView
                android:id="@+id/textRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/Relative_layout"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            tools:context=".MainActivity">
            <Button
                android:id="@+id/ConstraintLayout"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/bg"
                android:text="@string/_3"
                android:onClick="btn3"
                android:textSize="40sp"/>
            <TextView
                android:id="@+id/textConstrainLayout"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/constraint_layout"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            tools:context=".MainActivity">
            <Button
                android:id="@+id/FrameLayout"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/bg"
                android:text="@string/_4"
                android:onClick="btn4"

                android:textSize="40sp"/>
            <TextView
                android:id="@+id/textFrameLayout"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/Frame_layout"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            tools:context=".MainActivity">
            <Button
                android:id="@+id/TabelLayout"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/bg"
                android:text="@string/_5"
                android:onClick="btn5"
                android:textSize="40sp"/>
            <TextView
                android:id="@+id/textTabelLayout"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/Tabel_layout"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            tools:context=".MainActivity">
            <Button
                android:id="@+id/MaterialDesign"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/bg"
                android:text="@string/_6"
                android:onClick="btn6"
                android:textSize="40sp"/>
            <TextView
                android:id="@+id/textMaterialDesign"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/MaterialDesign"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            tools:context=".MainActivity">
            <Button
                android:id="@+id/scrollView"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/bg"
                android:text="@string/_7"
                android:onClick="btn7"
                android:textSize="40sp"/>
            <TextView
                android:id="@+id/textScrollView"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/ScrolView"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            tools:context=".MainActivity">
            <Button
                android:id="@+id/ScrollViewHorizontal"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/bg"
                android:text="@string/_8"
                android:onClick="btn8"

                android:textSize="40sp"/>
            <TextView
                android:id="@+id/textScrollViewHorizontal"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/ScrollViewHorizontal"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>